# fedimint-desktop

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  mprocs.yaml  package.json  tailwind.config.js
assets/: tailwind.css
src/: input.css  main.rs
src/components/: code.rs  dialog.rs  grid.rs  layout.rs  mod.rs  modal.rs  no_federation.rs  tabs.rs  toast.rs  widget.rs
src/components/dashboards/: mod.rs
src/components/dashboards/admin/: info.rs  mod.rs  operations.rs
src/components/dashboards/lightning/: claim_tweaks.rs  gateways.rs  invoice.rs  pay.rs  tweak_invoice.rs
src/components/dashboards/mint/: combine.rs  decode.rs  encode.rs  mod.rs  reissue.rs  spend.rs  split.rs  validate.rs
src/components/dashboards/onchain/: await.rs  create_address.rs  mod.rs
src/components/sidebar/: add_federation_dialog.rs  empty.rs  federation_item.rs  mod.rs
src/components/state/: fedimint.rs  mod.rs
src/components/ui/: button.rs  code.rs  copy_button.rs  dialog.rs  flex.rs  input.rs  mod.rs  popover.rs  qrcode.rs  text.rs  toast.rs
src/components/widgets/: mod.rs
src/components/widgets/admin/: denominations.rs  info.rs  meta.rs  mod.rs  operations.rs
src/components/widgets/lightning/: await.rs  claim_tweaks.rs  gateways.rs  invoice.rs  mod.rs  pay.rs  tweak_invoice.rs
src/components/widgets/mint/: combine.rs  decode.rs  encode.rs  mod.rs  reissue.rs  spend.rs  split.rs  validate.rs
src/routes/: home.rs  mod.rs
src/state/: app.rs  fedimint.rs  mod.rs
src/util/: get_invoice.rs  meta.rs  mod.rs  state.rs
src/util/types/: mod.rs  toast.rs
(+2 files in other folders)
