[package]
name = "fedimint-desktop"
version = "0.1.0"
authors = ["Conner Ow <conner@connerow.dev>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.5.6", features = ["desktop", "router", "html"] }
tracing = "0.1.40"
dioxus-logger = "0.5.0"
dioxus-cli = "0.5.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
dirs = "5.0.1"
dotenv = "0.15.0"
dioxus-html = "0.5.1"
tailwind_fuse = "0.3.0"
multimint = { path = "../fedimint-clientd/multimint" }
futures-util = "0.3.30"
tokio = { version = "1.34.0", features = ["full"] }
anyhow = "1.0.86"
dioxus-free-icons = { version = "0.8.6", features = ["lucide"] }
qrcode-generator = "4.1.9"
base64 = "0.22.1"
reqwest = "0.12.5"
lnurl-rs = { version = "0.6.0", features = ["async"], default-features = false }
chrono = "0.4.38"

[features]
bundle = []

[bundle]
resources = ["main.css", "header.svg"]

